syntax = "proto3";

option go_package = "edm-entities-approval-workflows-infrastructure";

package Edm.Entities.Approval.Workflows.Infrastructure;

option csharp_namespace = "Edm.Entities.Approval.Workflows.Infrastructure";

import "Repositories/Workflows/Contracts/Data/ApplicationEvents/EntitiesApprovalWorkflows/Results/entities_approval_workflows_result_approval_workflow_application_event.proto";
import "Repositories/Workflows/Contracts/Data/ApplicationEvents/EntitiesApprovalWorkflows/Events/entities_approval_workflows_event_approval_workflow_application_event.proto";

message ApprovalWorkflowApplicationEventDb {
  oneof value {
    EntitiesApprovalWorkflowsResultApprovalWorkflowApplicationEventDb as_entities_approval_workflows_result = 1;
    EntitiesApprovalWorkflowsEventApprovalWorkflowApplicationEventDb as_entities_approval_workflows_event = 2;
  }
}
